# PyPipboy

./: README.md  setup.cfg
doc/: NetworkChannel.md  PipboyDataManager.md  PipboyValue.md
examples/: comsnooper.py  jsondump.py  stimpak.py
pypipboy/: datamanager.py  dataparser.py  inventoryutils.py  network.py  relayserver.py
src/pypipboy/: dataencoder.py  inventoryutils.py  network.py  types.py
