[metadata]
name = PyPipboy
version = 1.0.0
author = matzman666
author_email = matzman@matzman.net
description = An event-driven library implementing the Fallout 4 Companion App protocol
long_description = file: README.md
long_description_content_type = text/markdown
url = hhttps://github.com/matzman666/PyPipboy
project_urls =
    Bug Tracker = https://github.com/matzman666/PyPipboy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = pypipboy
python_requires = >=3.0